* Thu Sep 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090917
- A warning is displayed to the screen indicating the level of average axial strain in an element whenever this strain exceeds 0.001 (0.1%) in magnitude.   Most structural materials yield at strain levels between 0.08% and 0.15%.  
- Loads in examples that are over-stressed were reduced.   
- Example files re-run.
- Update the user-manual.html reflecting these changes.

* Wed Sep 09 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090909
- Minor edit to user-manual.html 

* Tue Sep 08 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090908
- Update user-manual.html with notes on end force sign convention

* Wed Jun 24 2009 John Pye <john.pye@anu.edu.au> 0.20090624
- SoQT detection for SCons script.
- Fix error with runtime location of 'properties.txt' script.
- Fix error with arc2iv when file unable to be located.

* Wed Jun 10 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Small website tweaks ... font sizes, tabular layout,
- Trying to promote frame3dd.sourceforge.net in Google searches for '3d Frame'

* Wed Jun 3 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Changed all .frm file extensions to .3dd file extensions
- Registered frame3dd (.3dd) file extensions on filext.com

* Fri May 15 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Fixed bug in post-processor for deformed beam shapes. This bug fix occurs in lines 2668 - 2694 (function bent_beam) in frame3dd_io.c
- Re-ran example with May 15 2009 build

* Fri Apr 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090417
- Re-ran examples with April 17 2009 build
 
* Fri Apr 17 2009 John Pye <john.pye@anu.edu.au> 0.20090417
- Removed LinuxCommand PDF link in documentation.
- Removed little cmd prompt icons from documentation.
- New release on SF.net before new work on data structures commences.
- Reformatted changelog to PC format (may cause probs with RPM?)
- Removed wordy usage output from changelog (doesn't fit RPM formatting requirements).
