@@ -5,5 +5,5 @@ body {margin: 3px; font: normal small sans-serif; background-color: #FFFFEE; ove
 body.div {display:table; height: 100%; vertical-align:middle; text-align:center; border:0; padding:0; margin:0}
 </style>
 </head>
-<body><div>Version 0.20090917</div></body>
+<body><div>Version 0.20090922</div></body>
 </html>
